medical & hospitals overflow fixed

--- a/src/styling/submenu_1/donations/education.scss
+++ b/src/styling/submenu_1/donations/education.scss
@@ -64,6 +64,10 @@
             flex-direction: column;
             align-items: center;
 
+            @media screen and (max-width: 900px){
+                padding: 0;
+            }
+
             .section-header {
                 padding: 0 1rem;
                 margin: 3rem 0;
@@ -77,9 +81,17 @@
                 display: flex;
                 flex-direction: row;
                 margin-bottom: 4rem;
+                flex-wrap:wrap;
+                row-gap:1rem;
 
                 .desc {
                     width: 30vw;
+                    flex-grow: 1;
+
+                    @media screen and (max-width: 900px){
+                        margin: 0 .5rem 0 .5rem;
+                    }
+
                     p {
                         font-size:1.5rem;
                     }
@@ -89,6 +101,10 @@
                     width: 60vw;
                     max-height: 70vh;
                     object-fit: contain;
+
+                    @media screen and (max-width: 900px){
+                        width: 100%;
+                    }
                 }
 
                 #pic1 {
@@ -96,7 +112,10 @@
                 }
 
                 #pic2 {
-                    margin:0 0 0 1rem;
+                    margin-right:1rem;
+                    @media screen and (max-width: 900px){
+                        margin: 0;
+                    }
                 }
             }
         }
