--- a/src/styling/submenu_1/donations/medical.scss
+++ b/src/styling/submenu_1/donations/medical.scss
@@ -59,24 +59,30 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            @media screen and (max-width: 900px) {
+                padding: 0;
+            }
 
             .section-header {
                 padding: 0 1rem;
                 margin: 3rem 0;
-
-                h1 {
-                    font-weight: 500;
-                }
             }
 
             .subsection-wrapper {
                 display: flex;
                 flex-direction: row;
                 flex-wrap: wrap;
+                row-gap: 1rem;
                 margin-bottom: 4rem;
 
                 .desc {
                     width: 30vw;
+                    flex-grow: 1;
+
+                    @media screen and (max-width: 900px) {
+                        margin: 0 .5rem 0 .5rem;
+                    }
+
                     p {
                         font-size:1.5rem;
                     }
@@ -89,10 +95,18 @@
 
                 #pic1 {
                     margin-right: 2rem;
+                    @media screen and (max-width: 900px) {
+                        margin: 0;
+                        width: 100%;
+                    }
                 }
 
                 #pic2 {
                     margin:0 0 0 1rem;
+                    @media screen and (max-width: 900px) {
+                        margin: 0;
+                        width: 100%;
+                    }
                 }
             }
         }
